[gd_scene load_steps=52 format=3 uid="uid://bu6j0v2aj8gfi"]

[ext_resource type="Texture2D" uid="uid://cpnx38wjlkphy" path="res://Assets/Default/Conveyor/Paper/paper_in_6.png" id="1_0l1lu"]
[ext_resource type="Script" path="res://Code/Player.gd" id="1_kolsd"]
[ext_resource type="Script" path="res://Code/Enemy.gd" id="1_oxske"]
[ext_resource type="Texture2D" uid="uid://bq4fmb7hlavyg" path="res://Assets/Default/battle_background.png" id="1_pv84b"]
[ext_resource type="Texture2D" uid="uid://s7802tp51tgs" path="res://Assets/Default/Conveyor/Rock/rock_idle.png" id="2_78lwk"]
[ext_resource type="Texture2D" uid="uid://07ev3kxs2ngu" path="res://Assets/Default/Buttons/Rock/idle.png" id="6_5jrsc"]
[ext_resource type="Texture2D" uid="uid://2k7dnktwowel" path="res://Assets/Default/Buttons/Scissors/idle.png" id="6_u3ah1"]
[ext_resource type="Script" path="res://Code/Options.gd" id="7_1iy2a"]
[ext_resource type="Theme" uid="uid://74h4s6t66a2c" path="res://Assets/Fonts/Analog Clock FONT.tres" id="7_gp2xf"]
[ext_resource type="Script" path="res://Code/Countdown.gd" id="7_hbh5k"]
[ext_resource type="Texture2D" uid="uid://cohwaydqpd0iu" path="res://Assets/Default/Buttons/Paper/idle.png" id="7_hfe7r"]
[ext_resource type="Script" path="res://Code/Debug.gd" id="8_1kwu8"]
[ext_resource type="Texture2D" uid="uid://5lut1cddkj77" path="res://Assets/Default/Buttons/Hunter/pressed.png" id="9_f0o7p"]
[ext_resource type="Texture2D" uid="uid://bjmp37jgq5cev" path="res://Assets/Default/Buttons/Lizard/idle.png" id="10_2hjgw"]
[ext_resource type="Texture2D" uid="uid://c7kqkhsw3pfuq" path="res://Assets/Game Over/fired_graphic.png" id="10_7dql5"]
[ext_resource type="Texture2D" uid="uid://1o50x80pi0v6" path="res://Assets/Game Over/over_retry.png" id="10_dmq57"]
[ext_resource type="Texture2D" uid="uid://4svxata1gobm" path="res://Assets/Game Over/over_main.png" id="11_f2tlh"]
[ext_resource type="Texture2D" uid="uid://b28ik3602dudw" path="res://Assets/Game Over/over_quit.png" id="12_a5uiq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c3dky"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wuk23"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_p85ce"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pib5i"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hivkc"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_waend"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1i7aq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rungj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ey07h"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tg153"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mfbjn"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2cic6"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_w6mdn"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gpcga"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bsx0u"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_y6e8g"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_enq2h"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c1wdf"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6ex7q"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_swakb"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_i75dr"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a875q"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_84snj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_35ckk"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qfmrq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jdsr7"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6p67o"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fwjqo"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7rmrl"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_50s6n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8jqtc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_c3dky")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_wuk23")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_p85ce")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_pib5i")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_hivkc")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_waend")
}, {
"duration": 1.0,
"texture": ExtResource("1_0l1lu")
}],
"loop": false,
"name": &"paper_enter",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_1i7aq")
}],
"loop": true,
"name": &"paper_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_rungj")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_ey07h")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_tg153")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_mfbjn")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_2cic6")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_w6mdn")
}],
"loop": false,
"name": &"paper_leave",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_gpcga")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_bsx0u")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_y6e8g")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_enq2h")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_c1wdf")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_6ex7q")
}],
"loop": false,
"name": &"rock_enter",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_78lwk")
}],
"loop": false,
"name": &"rock_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_swakb")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_i75dr")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_a875q")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_84snj")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_35ckk")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_qfmrq")
}],
"loop": false,
"name": &"rock_leave",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_jdsr7")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_6p67o")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_fwjqo")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_7rmrl")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_50s6n")
}],
"loop": true,
"name": &"transition",
"speed": 24.0
}]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xyrgs"]
load_path = "res://.godot/imported/paper_idle.png-ff15289806a9704c53943c10aa6e49bb.ctex"

[sub_resource type="GDScript" id="GDScript_a5fcu"]
script/source = "extends CanvasLayer


func _on_button_pressed():
	%Lose.visible = false
"

[node name="Main" type="Node2D"]
position = Vector2(345, 221)

[node name="Enemy_Animated" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(210, -12)
scale = Vector2(0.360903, 0.360903)
sprite_frames = SubResource("SpriteFrames_8jqtc")
animation = &"paper_enter"
frame = 6
frame_progress = 1.0

[node name="README" type="Label" parent="Enemy_Animated"]
offset_left = -1485.16
offset_top = -3341.62
offset_right = 1594.84
offset_bottom = -2288.62
theme_override_font_sizes/font_size = 191
text = "This is currently here for when all
animations are imported; Scissor
animations are missing, so this
AnimatedSprite2D is hidden!"

[node name="Enemy" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(230, -16)
scale = Vector2(0.410002, 0.370002)
texture = SubResource("CompressedTexture2D_xyrgs")
script = ExtResource("1_oxske")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -345.0
offset_top = -221.0
offset_right = -305.0
offset_bottom = -181.0
scale = Vector2(0.72, 0.72)

[node name="battle_bg" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 2057.0
offset_bottom = 1157.0
scale = Vector2(0.777778, 0.777778)
texture = ExtResource("1_pv84b")

[node name="Player" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_kolsd")

[node name="Rock" type="TextureButton" parent="Player"]
unique_name_in_owner = true
offset_left = -67.0
offset_top = 181.0
offset_right = 133.0
offset_bottom = 381.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_5jrsc")
metadata/_edit_use_anchors_ = true

[node name="Paper" type="TextureButton" parent="Player"]
unique_name_in_owner = true
offset_left = 171.0
offset_top = 173.0
offset_right = 371.0
offset_bottom = 373.0
scale = Vector2(0.55, 0.55)
texture_normal = ExtResource("7_hfe7r")
metadata/_edit_use_anchors_ = true

[node name="Scissors" type="TextureButton" parent="Player"]
unique_name_in_owner = true
offset_left = 450.0
offset_top = 176.0
offset_right = 650.0
offset_bottom = 376.0
scale = Vector2(0.55, 0.55)
texture_normal = ExtResource("6_u3ah1")
metadata/_edit_use_anchors_ = true

[node name="Hunter" type="TextureButton" parent="Player"]
unique_name_in_owner = true
visible = false
offset_left = 42.0
offset_top = 204.0
offset_right = 685.0
offset_bottom = 564.0
scale = Vector2(0.157527, 0.157527)
texture_normal = ExtResource("9_f0o7p")
metadata/_edit_use_anchors_ = true

[node name="Lizard" type="TextureButton" parent="Player"]
unique_name_in_owner = true
visible = false
offset_left = 312.0
offset_top = 196.0
offset_right = 872.0
offset_bottom = 556.0
scale = Vector2(0.197142, 0.197142)
texture_normal = ExtResource("10_2hjgw")
metadata/_edit_use_anchors_ = true

[node name="Score Text" type="Node2D" parent="Player"]
position = Vector2(-220, 261)
skew = 0.244346

[node name="Score" type="Label" parent="Player/Score Text"]
unique_name_in_owner = true
offset_left = -70.4933
offset_top = -10.3061
offset_right = 540.506
offset_bottom = 128.694
rotation = 0.0385689
theme = ExtResource("7_gp2xf")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Countdown" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("7_hbh5k")

[node name="Timer Text" type="Node2D" parent="Countdown"]
position = Vector2(652, 524)
rotation = -0.0215411
scale = Vector2(0.95, 0.85)
skew = -0.296706

[node name="Second" type="Label" parent="Countdown/Timer Text"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = -0.132813
anchor_bottom = 0.143519
offset_left = 64.8548
offset_top = 12.7919
offset_right = 241.855
offset_bottom = 67.7919
theme = ExtResource("7_gp2xf")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Lose" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = SubResource("GDScript_a5fcu")

[node name="ColorRect" type="ColorRect" parent="Lose"]
offset_right = 1161.0
offset_bottom = 657.0
color = Color(0.0611451, 0.0336918, 0, 1)

[node name="fired_graphic" type="TextureRect" parent="Lose"]
offset_left = 29.0
offset_top = 29.0
offset_right = 707.0
offset_bottom = 414.0
texture = ExtResource("10_7dql5")

[node name="Label" type="Label" parent="Lose"]
visible = false
offset_left = 292.0
offset_top = 42.0
offset_right = 802.0
offset_bottom = 179.0
theme_override_font_sizes/font_size = 100
text = "YOU LOSE!"
horizontal_alignment = 1

[node name="Retry" type="Button" parent="Lose"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 138.0
offset_top = 471.0
offset_right = 433.0
offset_bottom = 587.0
theme_override_font_sizes/font_size = 40
text = "PLAY AGAIN"

[node name="retry_texture" type="TextureRect" parent="Lose/Retry"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("10_dmq57")

[node name="MainMenu" type="Button" parent="Lose"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 452.0
offset_top = 471.0
offset_right = 747.0
offset_bottom = 587.0
theme_override_font_sizes/font_size = 40
text = "MAIN MENU"

[node name="main_texture" type="TextureRect" parent="Lose/MainMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_f2tlh")

[node name="Quit" type="Button" parent="Lose"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 763.0
offset_top = 471.0
offset_right = 1058.0
offset_bottom = 587.0
theme_override_font_sizes/font_size = 40
text = "QUIT"

[node name="quit_texture" type="TextureRect" parent="Lose/Quit"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("12_a5uiq")

[node name="Final_Score" type="Label" parent="Lose"]
unique_name_in_owner = true
offset_left = 741.0
offset_top = 137.0
offset_right = 1334.0
offset_bottom = 228.0
scale = Vector2(0.6, 0.6)
theme = ExtResource("7_gp2xf")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.46, 0, 0.276, 0.364706)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 125
text = "FINAL SCORE: 
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Pause" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("7_1iy2a")

[node name="quit" type="Button" parent="Pause"]
unique_name_in_owner = true
offset_left = -324.0
offset_top = -106.0
offset_right = -285.0
offset_bottom = -75.0
scale = Vector2(8.24, 2.92)
text = "quit"

[node name="mainmenu" type="Button" parent="Pause"]
unique_name_in_owner = true
offset_left = -323.0
offset_top = 66.0
offset_right = -226.0
offset_bottom = 97.0
scale = Vector2(4.88, 2.92)
text = "main menu"

[node name="Debug" type="Node2D" parent="."]
visible = false
position = Vector2(0, -25)
script = ExtResource("8_1kwu8")

[node name="ColorRect" type="ColorRect" parent="Debug"]
offset_left = 566.0
offset_top = -110.0
offset_right = 802.0
offset_bottom = 397.0
color = Color(0.46, 0.294707, 0.00919999, 1)

[node name="Debug_AutoPlay" type="CheckBox" parent="Debug"]
unique_name_in_owner = true
offset_left = 570.0
offset_top = -69.0
offset_right = 672.0
offset_bottom = -38.0
scale = Vector2(1.76373, 1.82742)
text = "Auto Play"

[node name="Debug_StopTime" type="CheckBox" parent="Debug"]
unique_name_in_owner = true
offset_left = 570.0
offset_top = -28.0
offset_right = 676.0
offset_bottom = 3.0
scale = Vector2(1.76373, 1.82742)
text = "Stop Time"

[node name="Debug_ScoreIn" type="LineEdit" parent="Debug"]
unique_name_in_owner = true
offset_left = 578.0
offset_top = 33.0
offset_right = 695.0
offset_bottom = 73.0
placeholder_text = "New Score"

[node name="Debug_ScoreSet" type="Button" parent="Debug"]
offset_left = 700.0
offset_top = 33.0
offset_right = 789.0
offset_bottom = 73.0
text = "Set"

[node name="Debug_CountdownIn" type="LineEdit" parent="Debug"]
unique_name_in_owner = true
offset_left = 578.0
offset_top = 86.0
offset_right = 714.0
offset_bottom = 126.0
placeholder_text = "Countdown Max"
expand_to_text_length = true

[node name="Debug_ResourcePath" type="LineEdit" parent="Debug"]
unique_name_in_owner = true
offset_left = 578.0
offset_top = 133.0
offset_right = 730.0
offset_bottom = 173.0
placeholder_text = "Resource Path"
alignment = 2

[node name="Debug_CountdownSet" type="Button" parent="Debug"]
offset_left = 721.0
offset_top = 86.0
offset_right = 789.0
offset_bottom = 126.0
text = "Set"

[node name="Debug_ResourcePathSet" type="Button" parent="Debug"]
offset_left = 738.0
offset_top = 133.0
offset_right = 789.0
offset_bottom = 173.0
text = "Set"

[node name="Debug_SkipRound" type="Button" parent="Debug"]
offset_left = 578.0
offset_top = 180.0
offset_right = 790.0
offset_bottom = 221.0
text = "Skip Round"

[node name="Debug_SelectionSwap" type="Button" parent="Debug"]
offset_left = 578.0
offset_top = 233.0
offset_right = 790.0
offset_bottom = 274.0
text = "Selection Swap"

[node name="Debug_Label" type="Label" parent="Debug"]
offset_left = 582.0
offset_top = -102.0
offset_right = 702.0
offset_bottom = -79.0
scale = Vector2(1.72046, 1.68708)
text = "Debug Options:"

[node name="Debug_FPS_Label" type="Label" parent="Debug"]
unique_name_in_owner = true
offset_left = 578.0
offset_top = 282.0
offset_right = 610.0
offset_bottom = 305.0
scale = Vector2(2.15302, 2.15302)
text = "FPS:"

[node name="Debug_FPS_Label2" type="Label" parent="Debug"]
unique_name_in_owner = true
offset_left = 578.0
offset_top = 341.0
offset_right = 649.0
offset_bottom = 364.0
scale = Vector2(1.71181, 1.71181)
text = "FPS Goal:"

[connection signal="pressed" from="Player/Rock" to="Player" method="_on_rock_pressed"]
[connection signal="pressed" from="Player/Paper" to="Player" method="_on_paper_pressed"]
[connection signal="pressed" from="Player/Scissors" to="Player" method="_on_scissors_pressed"]
[connection signal="pressed" from="Player/Hunter" to="Player" method="_on_hunter_pressed"]
[connection signal="pressed" from="Player/Lizard" to="Player" method="_on_lizard_pressed"]
[connection signal="pressed" from="Lose/Retry" to="Player" method="retry"]
[connection signal="pressed" from="Lose/MainMenu" to="Player" method="_on_main_menu_pressed"]
[connection signal="pressed" from="Lose/Quit" to="Player" method="_on_quit_pressed"]
[connection signal="pressed" from="Pause/quit" to="Pause" method="_on_quit_pressed"]
[connection signal="pressed" from="Pause/mainmenu" to="Pause" method="_on_mainmenu_pressed"]
[connection signal="pressed" from="Debug/Debug_AutoPlay" to="Debug" method="_on_debug_auto_play_pressed"]
[connection signal="pressed" from="Debug/Debug_StopTime" to="Debug" method="_on_debug_stop_time_pressed"]
[connection signal="pressed" from="Debug/Debug_ScoreSet" to="Debug" method="_on_debug_score_set_pressed"]
[connection signal="pressed" from="Debug/Debug_CountdownSet" to="Debug" method="_on_debug_countdown_set_pressed"]
[connection signal="pressed" from="Debug/Debug_ResourcePathSet" to="Debug" method="_on_debug_resource_path_set_pressed"]
[connection signal="pressed" from="Debug/Debug_SkipRound" to="Debug" method="_on_debug_skip_round_pressed"]
[connection signal="pressed" from="Debug/Debug_SelectionSwap" to="Debug" method="_on_debug_selection_swap_pressed"]
